cmake_minimum_required(VERSION 3.27)
project(leetcode C)

set(CMAKE_C_STANDARD 11)

add_executable(leetcode
        "001-Two Sum.c"
        "002-Add Two Numbers.c"
        "003-Longest Substring Without Repeating Characters.c"
        "005-Longest Palindromic Substring.c"
        "006-ZigZag Conversion.c"
        "007-Reverse Integer.c"
        "008-String to Integer (atoi).c"
        "009-Palindrome Number.c"
        "011-Container With Most Water.c"
        "012-Integer to Roman.c"
        "013-Roman to Integer.c"
        "014-Longest Common Prefix.c"
        015-3Sum.c
        "016-3Sum Closest.c"
        "017-Letter Combinations of a Phone Number.c"
        018-4Sum.c
        "019-Remove Nth Node From End of List.c"
        "020-Valid Parentheses.c"
        "021-Merge Two Sorted Lists.c"
        "022-Generate Parentheses.c"
        "023-Merge k Sorted Lists.c"
        "024-Swap Nodes in Pairs.c"
        "025-Reverse Nodes in k-Group.c"
        "026-Remove Duplicates from Sorted Array.c"
        "027-Remove Element.c"
        "028-Implement strStr().c"
        "029-Divide Two Integers.c"
        "030-Substring with Concatenation of All Words.c"
        "031-Next Permutation.c"
        "032-Longest Valid Parentheses.c"
        "033-Search in Rotated Sorted Array.c"
        "034-Search for a Range.c"
        "035-Search Insert Position.c"
        "036-Valid Sudoku.c"
        "038-Count and Say.c"
        "039-Combination Sum.c"
        "040-Combination Sum II.c"
        "041-First Missing Positive.c"
        "042-Trapping Rain Water.c"
        "043-Multiply Strings.c"
        "044-Wildcard Matching.c"
        "045-Jump Game II.c"
        046-Permutations.c
        "047-Permutations II.c"
        "048-Rotate Image.c"
        049-Anagrams.c
        "050-Pow(x, n).c"
        051-N-Queens.c
        "052-N-Queens II.c"
        "053-Maximum Subarray.c"
        "054-Spiral Matrix.c"
        "055-Jump Game.c"
        "056-Merge Intervals.c"
        "057-Insert Interval.c"
        "058-Length of Last Word.c"
        "059-Spiral Matrix II.c"
        "060-Permutation Sequence.c"
        "061-Rotate List.c"
        "062-Unique Paths.c"
        "063-Unique Paths II.c"
        "064-Minimum Path Sum.c"
        "066-Plus One.c"
        "067-Add Binary.c"
        "069-Sqrt(x).c"
        "070-Climbing Stairs.c"
        "071-Simplify Path.c"
        "072-Edit Distance.c"
        "073-Set Matrix Zeroes.c"
        "074-Search a 2D Matrix.c"
        "075-Sort Colors.c"
        "076-Minimum Window Substring.c"
        077-Combinations.c
        078-Subsets.c
        "079-Word Search.c"
        "080-Remove Duplicates from Sorted Array II.c"
        "081-Search in Rotated Sorted Array II.c"
        "082-Remove Duplicates from Sorted List II.c"
        "083-Remove Duplicates from Sorted List.c"
        "084-Largest Rectangle in Histogram.c"
        "086-Partition List.c"
        "087-Scramble String.c"
        "088-Merge Sorted Array.c"
        "089-Gray Code.c"
        "090-Subsets II.c"
        "091-Decode Ways.c"
        "092-Reverse Linked List II.c"
        "093-Restore IP Addresses.c"
        "094-Binary Tree Inorder Traversal.c"
        "095-Unique Binary Search Trees II.c"
        "096-Unique Binary Search Trees.c"
        "097-Interleaving String.c"
        "098-Validate Binary Search Tree.c"
        "099-Recover Binary Search Tree.c"
        "100-Same Tree.c"
        "101-Symmetric Tree.c"
        "102-Binary Tree Level Order Traversal.c"
        "103-Binary Tree Zigzag Level Order Traversal.c"
        "104-Maximum Depth of Binary Tree.c"
        "105-Construct Binary Tree from Preorder and Inorder Traversal.c"
        "106-Construct Binary Tree from Inorder and Postorder Traversal.c"
        "107-Binary Tree Level Order Traversal II.c"
        "108-Convert Sorted Array to Binary Search Tree.c"
        "109-Convert Sorted List to Binary Search Tree.c"
        "110-Balanced Binary Tree.c"
        "111-Minimum Depth of Binary Tree.c"
        "112-Path Sum.c"
        "113-Path Sum II.c"
        "114-Flatten Binary Tree to Linked List.c"
        "115-Distinct Subsequences.c"
        "116-Populating Next Right Pointers in Each Node.c"
        "117-Populating Next Right Pointers in Each Node II.c"
        "118-Pascal's Triangle.c"
        "119-Pascal's Triangle II.c"
        120-Triangle.c
        "121-Best Time to Buy and Sell Stock.c"
        "122-Best Time to Buy and Sell Stock II.c"
        "123-Best Time to Buy and Sell Stock III.c"
        "124-Binary Tree Maximum Path Sum.c"
        "125-Valid Palindrome.c"
        "128-Longest Consecutive Sequence.c"
        "129-Sum Root to Leaf Numbers.c"
        "130-Surrounded Regions.c"
        "131-Palindrome Partitioning.c"
        "133-Clone Graph.c"
        "134-Gas Station.c"
        135-Candy.c
        "136-Single Number.c"
        "137-Single Number II.c"
        "138-Copy List with Random Pointer.c"
        "141-Linked List Cycle.c"
        "142-Linked List Cycle II.c"
        "143-Reorder List.c"
        "144-Binary Tree Preorder Traversal.c"
        "145-Binary Tree Postorder Traversal.c"
        "147-Insertion Sort List.c"
        "148-Sort List.c"
        "149-Max Points on a Line.c"
        "150-Evaluate Reverse Polish Notation.c"
        "151-Reverse Words in a String.c"
        "152-Maximum Product Subarray.c"
        "153-Find Minimum in Rotated Sorted Array.c"
        "154-Find Minimum in Rotated Sorted Array II.c"
        "155-Min Stack.c"
        "160-Intersection of Two Linked Lists.c"
        "162-Find Peak Element.c"
        "164-Maximum Gap.c"
        "165-Compare Version Numbers.c"
        "166-Fraction to Recurring Decimal.c"
        "168-Excel Sheet Column Title.c"
        "169-Majority Element.c"
        "171-Excel Sheet Column Number.c"
        "172-Factorial Trailing Zeroes.c"
        "173-Binary Search Tree Iterator.c"
        "179-Largest Number.c"
        "187-Repeated DNA Sequences.c"
        "188-Best Time to Buy and Sell Stock IV.c"
        "189-Rotate Array.c"
        "191-Number of 1 Bits.c"
        "198-House Robber.c"
        "199-Binary Tree Right Side View.c"
        "200-Number of Islands.c"
        "201-Bitwise AND of Numbers Range.c"
        "202-Happy Number.c"
        "203-Remove Linked List Elements.c"
        "204-Count Primes.c"
        "205-Isomorphic Strings.c"
        "206-Reverse Linked List.c"
        "207-Course Schedule.c"
        "208-Implement Trie (Prefix Tree).c"
        "209-Minimum Size Subarray Sum.c"
        "210-Course Schedule II.c"
        "211-Add and Search Word - Data structure design.c"
        "212-Word Search II.c"
        "213-House Robber II.c"
        "214-Shortest Palindrome.c"
        "215-Kth Largest Element in an Array.c"
        "216-Combination Sum III.c"
        "217-Contains Duplicate.c"
        "219-Contains Duplicate II.c"
        "220-Contains Duplicate III.c"
        "221-Maximal Square.c"
        "222-Count Complete Tree NodesM.c"
        "223-Rectangle Area.c"
        "224-Basic Calculator.c"
        "225-Implement Stack using Queues.c"
        "226-Invert Binary Tree.c"
        "227-Basic Calculator II.c"
        "228-Summary Ranges.c"
        "229-Majority Element II.c"
        "230-Kth Smallest Element in a BST.c"
        "231-Power of Two.c"
        "232-Implement Queue using Stacks.c"
        "233-Number of Digit One.c"
        "234-Palindrome Linked List.c"
        "235-Lowest Common Ancestor of a Binary Search Tree.c"
        "236-Lowest Common Ancestor of a Binary Tree.c"
        "237-Delete Node in a Linked List.c"
        "238-Product of Array Except Self.c"
        "239-Sliding Window Maximum.c"
        "240-Search a 2D Matrix II.c"
        "241-Different Ways to Add Parentheses.c"
        "242-Valid Anagram.c"
        "257-Binary Tree Paths.c"
        "258-Add Digits.c"
        "260-Single Number III.c"
        "263-Ugly Number.c"
        "264-Ugly Number II.c"
        "268-Missing Number.c"
        "273-Integer to English Words.c"
        "278-First Bad Version.c"
        "290-Word Pattern.c"
        "292-Nim Game.c"
        "299-Bulls and Cows.c"
        "301-Remove Invalid Parentheses.c"
        "303-Range Sum Query - Immutable.c"
        "304-Range Sum Query 2D - Immutable.c"
        "306-Additive Number.c"
        "307-Range Sum Query - Mutable.c"
        "313-Super Ugly Number.c"
        "316-Remove Duplicate Letters.c"
        "318-Maximum Product of Word Lengths.c"
        "319-Bulb Switcher.c"
        "321-Create Maximum Number.c"
        "322-Coin Change.c"
        "324-Wiggle Sort II.c"
        "326-Power of Three.c"
        "327-Count of Range Sum.c"
        "328-Odd Even Linked List.c"
        "329-Longest Increasing Path in a Matrix.c"
        "330-Patching Array.c"
        "331-Verify Preorder Serialization of a Binary Tree.c"
        "332-Reconstruct Itinerary.c"
        ds.h)
